--- a/m05_v01_store_sales_prediction.ipynb
+++ b/m05_v01_store_sales_prediction.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 126,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T17:57:28.967165Z",
-     "start_time": "2021-05-20T17:57:28.958731Z"
+     "end_time": "2021-05-20T18:45:36.116000Z",
+     "start_time": "2021-05-20T18:45:35.720617Z"
     }
    },
    "outputs": [],
@@ -32,7 +32,7 @@
     "from IPython.display       import Image\n",
     "from tabulate              import tabulate\n",
     "from scipy                 import stats as ss\n",
-    "from sklearn.preprocessing import RobustScaler, MinMaxScaler\n"
+    "from sklearn.preprocessing import RobustScaler, MinMaxScaler, LabelEncoder\n"
    ]
   },
   {
@@ -3477,11 +3477,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 115,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T16:47:40.759201Z",
-     "start_time": "2021-05-20T16:47:39.972374Z"
+     "end_time": "2021-05-20T18:42:40.134317Z",
+     "start_time": "2021-05-20T18:42:37.060418Z"
     }
    },
    "outputs": [],
@@ -3498,19 +3498,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## 5.2. Reacaling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 116,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T17:28:29.016793Z",
-     "start_time": "2021-05-20T17:28:28.504989Z"
-    }
+     "end_time": "2021-05-20T18:42:42.171476Z",
+     "start_time": "2021-05-20T18:42:40.138151Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3519,12 +3522,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 117,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T17:57:45.182266Z",
-     "start_time": "2021-05-20T17:57:44.983198Z"
-    }
+     "end_time": "2021-05-20T18:42:44.837854Z",
+     "start_time": "2021-05-20T18:42:42.176363Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3553,9 +3557,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-20T18:19:35.542912Z",
+     "start_time": "2021-05-20T18:19:35.531307Z"
+    }
+   },
+   "source": [
+    "### 5.3.1 Encoding"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 121,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-20T18:42:51.722065Z",
+     "start_time": "2021-05-20T18:42:45.454675Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# state_holiday - One Hot Encoding\n",
+    "df5 = pd.get_dummies( df5,prefix=['state_holiday'], columns=['state_holiday'])\n",
+    "\n",
+    "# store_type - Label Encoding\n",
+    "le = LabelEncoder()\n",
+    "df5['store_type'] = le.fit_transform( df5['store_type'] )\n",
+    "\n",
+    "# assortment - Ordinal Encoding\n",
+    "assortment_dict = {'basic': 1, 'extra': 2,'extended': 3}\n",
+    "df5['assortment'] = df5['assortment'].map( assortment_dict )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-20T18:42:44.848448Z",
+     "start_time": "2021-05-20T18:42:44.842866Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# month\n",
