--- a/m05_v01_store_sales_prediction.ipynb
+++ b/m05_v01_store_sales_prediction.ipynb
@@ -3477,11 +3477,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 145,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T18:42:40.134317Z",
-     "start_time": "2021-05-20T18:42:37.060418Z"
+     "end_time": "2021-05-20T20:17:04.614895Z",
+     "start_time": "2021-05-20T20:17:04.241666Z"
     }
    },
    "outputs": [],
@@ -3507,11 +3507,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 146,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T18:42:42.171476Z",
-     "start_time": "2021-05-20T18:42:40.138151Z"
+     "end_time": "2021-05-20T20:17:04.778282Z",
+     "start_time": "2021-05-20T20:17:04.618964Z"
     },
     "hidden": true
    },
@@ -3522,11 +3522,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 147,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T18:42:44.837854Z",
-     "start_time": "2021-05-20T18:42:42.176363Z"
+     "end_time": "2021-05-20T20:17:05.764482Z",
+     "start_time": "2021-05-20T20:17:04.789704Z"
     },
     "hidden": true
    },
@@ -3565,16 +3565,16 @@
     }
    },
    "source": [
-    "### 5.3.1 Encoding"
+    "### 5.3.0 Encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 148,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T18:42:51.722065Z",
-     "start_time": "2021-05-20T18:42:45.454675Z"
+     "end_time": "2021-05-20T20:17:07.071992Z",
+     "start_time": "2021-05-20T20:17:05.768877Z"
     }
    },
    "outputs": [],
@@ -3592,20 +3592,288 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.3.1. Response Variable Transformation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 149,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T18:42:44.848448Z",
-     "start_time": "2021-05-20T18:42:44.842866Z"
+     "end_time": "2021-05-20T20:17:07.131932Z",
+     "start_time": "2021-05-20T20:17:07.075456Z"
     }
    },
    "outputs": [],
    "source": [
+    "df5['sales'] = np.log1p( df5['sales'] )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.3.2. Nature Transformation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-20T20:17:30.001704Z",
+     "start_time": "2021-05-20T20:17:07.135854Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# day_of_week\n",
+    "df5['day_of_week_sin'] = df5['day_of_week'].apply( lambda x: np.sin( x * ( 2. * np.pi/7) ) )\n",
+    "df5['day_of_week_cos'] = df5['day_of_week'].apply( lambda x: np.cos( x * ( 2. * np.pi/7) ) )\n",
+    "\n",
     "# month\n",
+    "df5['month_sin'] = df5['month'].apply( lambda x: np.sin( x * ( 2. * np.pi/12) ) )\n",
+    "df5['month_cos'] = df5['month'].apply( lambda x: np.cos( x * ( 2. * np.pi/12) ) )\n",
+    "\n",
+    "\n",
     "# day\n",
+    "df5['day_sin'] = df5['day'].apply( lambda x: np.sin( x * ( 2. * np.pi/30) ) )\n",
+    "df5['day_cos'] = df5['day'].apply( lambda x: np.cos( x * ( 2. * np.pi/30) ) )\n",
+    "\n",
     "# week_of_year\n",
-    "# day_of_week"
+    "df5['week_of_year_sin'] = df5['week_of_year'].apply( lambda x: np.sin( x * ( 2. * np.pi/52) ) )\n",
+    "df5['week_of_year_cos'] = df5['week_of_year'].apply( lambda x: np.cos( x * ( 2. * np.pi/52) ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-20T20:17:30.069988Z",
+     "start_time": "2021-05-20T20:17:30.004876Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>date</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>promo</th>\n",
+       "      <th>school_holiday</th>\n",
+       "      <th>store_type</th>\n",
+       "      <th>assortment</th>\n",
+       "      <th>competition_distance</th>\n",
+       "      <th>competition_open_since_month</th>\n",
+       "      <th>...</th>\n",
+       "      <th>state_holiday_puplic_holiday</th>\n",
+       "      <th>state_holiday_regular_day</th>\n",
+       "      <th>day_of_week_sin</th>\n",
+       "      <th>day_of_week_cos</th>\n",
+       "      <th>month_sin</th>\n",
+       "      <th>month_cos</th>\n",
+       "      <th>day_sin</th>\n",
+       "      <th>day_cos</th>\n",
+       "      <th>week_of_year_sin</th>\n",
+       "      <th>week_of_year_cos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>8.568646</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.170968</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.974928</td>\n",
+       "      <td>-0.222521</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>-0.866025</td>\n",
+       "      <td>0.207912</td>\n",
+       "      <td>0.978148</td>\n",
+       "      <td>-0.568065</td>\n",
+       "      <td>-0.822984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>8.710290</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.283871</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.974928</td>\n",
+       "      <td>-0.222521</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>-0.866025</td>\n",
+       "      <td>0.207912</td>\n",
+       "      <td>0.978148</td>\n",
+       "      <td>-0.568065</td>\n",
+       "      <td>-0.822984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>9.025816</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.903226</td>\n",
+       "      <td>12</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.974928</td>\n",
+       "      <td>-0.222521</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>-0.866025</td>\n",
+       "      <td>0.207912</td>\n",
+       "      <td>0.978148</td>\n",
+       "      <td>-0.568065</td>\n",
+       "      <td>-0.822984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>9.546527</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.275806</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.974928</td>\n",
+       "      <td>-0.222521</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>-0.866025</td>\n",
+       "      <td>0.207912</td>\n",
+       "      <td>0.978148</td>\n",
+       "      <td>-0.568065</td>\n",
+       "      <td>-0.822984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>8.481151</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.448387</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.974928</td>\n",
+       "      <td>-0.222521</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>-0.866025</td>\n",
+       "      <td>0.207912</td>\n",
+       "      <td>0.978148</td>\n",
+       "      <td>-0.568065</td>\n",
+       "      <td>-0.822984</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   store  day_of_week       date     sales  promo  school_holiday  store_type  \\\n",
+       "0      1            5 2015-07-31  8.568646      1               1           2   \n",
+       "1      2            5 2015-07-31  8.710290      1               1           0   \n",
+       "2      3            5 2015-07-31  9.025816      1               1           0   \n",
+       "3      4            5 2015-07-31  9.546527      1               1           2   \n",
+       "4      5            5 2015-07-31  8.481151      1               1           0   \n",
+       "\n",
+       "   assortment  competition_distance  competition_open_since_month  ...  \\\n",
+       "0           1             -0.170968                             9  ...   \n",
+       "1           1             -0.283871                            11  ...   \n",
+       "2           1              1.903226                            12  ...   \n",
+       "3           3             -0.275806                             9  ...   \n",
+       "4           1              4.448387                             4  ...   \n",
+       "\n",
+       "   state_holiday_puplic_holiday  state_holiday_regular_day  day_of_week_sin  \\\n",
+       "0                             0                          1        -0.974928   \n",
+       "1                             0                          1        -0.974928   \n",
+       "2                             0                          1        -0.974928   \n",
+       "3                             0                          1        -0.974928   \n",
+       "4                             0                          1        -0.974928   \n",
+       "\n",
+       "   day_of_week_cos  month_sin  month_cos   day_sin   day_cos  \\\n",
+       "0        -0.222521       -0.5  -0.866025  0.207912  0.978148   \n",
+       "1        -0.222521       -0.5  -0.866025  0.207912  0.978148   \n",
+       "2        -0.222521       -0.5  -0.866025  0.207912  0.978148   \n",
+       "3        -0.222521       -0.5  -0.866025  0.207912  0.978148   \n",
+       "4        -0.222521       -0.5  -0.866025  0.207912  0.978148   \n",
+       "\n",
+       "   week_of_year_sin week_of_year_cos  \n",
+       "0         -0.568065        -0.822984  \n",
+       "1         -0.568065        -0.822984  \n",
+       "2         -0.568065        -0.822984  \n",
+       "3         -0.568065        -0.822984  \n",
+       "4         -0.568065        -0.822984  \n",
+       "\n",
+       "[5 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5.head()"
    ]
   }
  ],
